Add Vulkan path tracing enhancements